Fix Nav Bar shifting down

--- a/src/components/Nav/nav.css
+++ b/src/components/Nav/nav.css
@@ -62,28 +62,34 @@
   }
 }
 
-/*  */
 .donate:hover {
   transition: 0.3s linear;
   background-color: #c5203e;
 }
 
-@media (max-width: 1140px) {
-  .navbar-right {
-    float: right !important;
-    margin-right: -15px;
-    display: none;
+@media (min-width: 768px) and (max-width: 1200px) {
+  .container-fluid {
+    display: flex;
+    flex-flow: column nowrap;
+    justify-content: center;
+    align-items: center;
   }
-  .main-navigation .navbar-toggle {
-    display: block;
-    position: absolute;
-    float: right;
-    padding: 9px 10px;
-    margin-top: 8px;
-    margin-right: 15px;
-    margin-bottom: 8px;
-    background-color: transparent;
-    background-image: none;
-    border: 1px solid transparent;
+  #navbar-list {
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: space-between;
+    align-items: center;
+    transition: linear;
+    margin-top: 0;
+    padding: 0;
+  }
+  .navbar-nav li{
+    padding-top: 0;
+  }
+  #navbar-brand {
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: center;
+    width: auto;
   }
 }
